# grps_trtllm

./: .config  .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: base64_img_cli.py  llamaindex_ai_agent.py  olm_ocr_cli.py  openai_benchmark.py  openai_cli.py  openai_func_call.py  openai_func_call2.py  openai_txt_cli.py  triton_benchmark.py  triton_cli.py  triton_txt_cli.py
conf/: inference.yml  inference_chatglm3.yml  inference_deepseek-r1-distill-llama.yml  inference_deepseek-r1-distill-qwen.yml  inference_gemma3_text.yml  inference_glm4.yml  inference_intern-video2.5-chat-8B.yml  inference_internlm2.5.yml  inference_internvl2-1B.yml  inference_internvl2-2B.yml  inference_internvl2-4B.yml  inference_internvl2-8B.yml  inference_internvl2.5-4B.yml  inference_internvl2.5-8B.yml  inference_internvl2.yml  inference_internvl3-9B.yml  inference_internvl3.yml  inference_janus-pro.yml  inference_llama3.yml  inference_minicpmv.yml  inference_olm_ocr.yml  inference_phi3.yml  inference_phi4.yml  inference_qwen2-vl-2B.yml  inference_qwen2-vl-7B.yml  inference_qwen2.5-coder.yml  inference_qwen2.5.yml  inference_qwen2.yml  inference_qwen3.yml  inference_qwenvl.yml  inference_qwq-preview.yml  inference_qwq.yml  server.yml
data/: 13k_novel.txt  22k_novel.txt  32k_novel.txt
docker/: Dockerfile
docs/: benchmark.md  chatglm3.md  deepseek-r1-distill.md  docker.md  gemma3.md  glm4.md  gradio.md  images.md  intern-video2.5.md  internlm2.5.md  internvl2.5.md  internvl2.md  internvl3.md  janus-pro.md  kv_reuse.md  llama3.md  lookahead.md  minicpmv.md  next.md  olm-ocr.md  performance.md  phi3.md  phi4.md  qwen2.5-coder.md  qwen2.5.md  qwen2.md  qwen2vl.md  qwen3.md  qwenvl.md  qwq-preview.md  qwq.md  release_note.md  sampling.md  scheduler.md
processors/intern-video2.5/: .gitignore  README.md  requirements.txt  test.py
processors/intern-video2.5/client/python/: grpc_client.py
processors/intern-video2.5/conf/: inference.yml  server.yml
processors/intern-video2.5/src/: customized_converter.py  customized_inferer.py
processors/minicpmv/: README.md  requirements.txt
processors/minicpmv/client/python/: grpc_client.py
processors/minicpmv/conf/: inference.yml  server.yml
processors/minicpmv/src/: customized_converter.py  customized_inferer.py
second_party/grps-server-framework/include/config/: global_config.h
second_party/grps-server-framework/include/model_infer/: tensor_wrapper.h
src/: CMakeLists.txt  constants.cc  constants.h  customized_inferer.cc  customized_inferer.h  grps_cli.cc  grps_cli.h  llm_styler.cc  llm_styler.h  main.cc  tokenizer.cc  tokenizer.h  trtllm_model_instance.cc  trtllm_model_instance.h  trtllm_model_state.cc  trtllm_model_state.h  types.h  utils.cc  utils.h
src/tensorrt/: cuda_helper.h  trt_cuda.h  trt_inferer.cc  trt_inferer.h
src/vit/: gemma3_vit.cc  gemma3_vit.h  intern_video_2_5_vit.cc  intern_video_2_5_vit.h  internvl2_vit.cc  internvl2_vit.h  janus_pro_vit.cc  janus_pro_vit.h  minicpmv_vit.cc  minicpmv_vit.h  qwen2vl_vit.cc  qwen2vl_vit.h  qwenvl_vit.cc  qwenvl_vit.h  vit.cc  vit.h
tools/: glm4_tiktoken_to_hf.py
tools/gemma3/: build_vit_engine.py  requirements.txt  split_llm.py
tools/gemma3/tensorrt_llm_mod/layers/: attention.py
tools/gemma3/tensorrt_llm_mod/models/: __init__.py  modeling_utils.py
tools/gemma3/tensorrt_llm_mod/models/gemma/: config.py  convert.py  model.py
tools/gemma3/tensorrt_llm_ori/layers/: attention.py
tools/gemma3/tensorrt_llm_ori/models/: __init__.py  gemma  modeling_utils.py
tools/gradio/: llm_app.py  requirements.txt
tools/intern-video2.5/: hf_infer.py  requirements.txt
tools/internvl2/: build_vit_engine.py  convert_llm_ckpt.py  convert_phi3_ckpt.py  convert_qwen2_ckpt.py  hf_internvl2_infer.py  requirements.txt
tools/janus-pro/: build_vit_engine.py  fix_trt_err.diff  requirements.txt  split_llm.py
tools/minicpmv/: hf_minicpmv_infer.py  split_llm.py
tools/qwen2vl/: build_vit_engine.py  hf_qwen2vl_infer.py
tools/qwen3/: hf_qwen3_infer.py
tools/qwenvl/: build_vit_engine.py  convert_checkpoint.py  hf_qwenvl_infer.py  requirements.txt
tools/tiktoken/: tiktoken_to_hf.py
